fix(ux): wrap markdown text code, improve ButtonIcon sizes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,4 +38,11 @@
     .animate-backdrop {
         animation: backdrop-open 200ms ease-out forwards;
     }
+    .wrap-anywhere {
+        overflow-wrap: anywhere;
+    }
+    .force-reset-spacing {
+        padding: 0!important;
+        margin: 0!important;
+    }
 }
